# QuantumShield

./: .gitignore  README.md
docs/: Architecture.md
kemtls/: channel.py  handshake.py  kemtls_client.py  kemtls_server.py
policy/: crypto_policy.json  policy_loader.py
quantumshield-backend/: pyproject.toml
quantumshield-backend/app/: main.py
quantumshield-backend/app/api/: __init__.py  routes.py
quantumshield-backend/app/benchmarking/: __init__.py  engine.py  report.py
quantumshield-backend/app/kemtls/: __init__.py  channel.py  protocol.py
quantumshield-backend/app/oidc/: __init__.py  pkce.py  provider.py
quantumshield-backend/app/pqcrypto/: __init__.py  kem.py  signatures.py
quantumshield-backend/app/scanner/: __init__.py  tls_scanner.py
quantumshield-backend/app/tokens/: __init__.py  engine.py  jwks.py
quantumshield-frontend/: index.html  package-lock.json  package.json
quantumshield-frontend/src/: App.tsx  index.css
quantumshield-frontend/src/components/: AuthPage.tsx  BenchmarksPage.tsx  KEMTLSPage.tsx  Layout.tsx  ScannerPage.tsx  StatusPage.tsx
quantumshield-frontend/src/lib/: api.ts
